// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> Debe mostar <GifGrid /> correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounce"
  >
    Prueba
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en <GifGrid /> Debe mostar <GifGrid /> correctamente 2`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounce"
  >
    Prueba
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABX"
      key="ABX"
      title="probando"
      url="Web"
    />
  </div>
</Fragment>
`;
